added functions and documentation

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.4
 	tzapu/WiFiManager@^0.16.0
+	bblanchon/ArduinoJson@^6.19.4
