--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ lib_deps =
 	crankyoldgit/IRremoteESP8266@^2.8.4
 	tzapu/WiFiManager@^0.16.0
 	bblanchon/ArduinoJson@^6.19.4
+	arduino-libraries/NTPClient@^3.2.1
 build_flags = -fexceptions
